2013-03-15  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/telnet-extra.exp: Improve commenting throughout
	(telnet_close): Ensure we have a spawn_id for actions, unset
	spawn_id on close, declare spawn_id global.
	(telnet_exec): Clearer handling of names and args, declare
	spawn_id global.
	(telnet_spawn_open): New proc, declare spawn_id global.
	(telnet_spawn): Rewritten to use its own spawn_id, independent of
	telnet_exec, declare spawn_id global.

2013-03-08  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-generic.exp: Set up to read a
	command file on GDB startup.
	* dejagnu/telnet-extra.exp (telnet_failure_check): Better error
	message.
	* run-uclibc-tests.sh: Create a command file to set sysroot.

2013-03-08  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-linux.sh: Turn off ARC_MMU_SASID and ARC_CMN_MMAP by default.

2013-03-04  Simon Cook  <simon.cook@embecosm.com>

	* build-elf32.sh: Add support for building big endian ELF tool chain.
	* build-uclibc.sh: Set build_dir based on endianness of tools.
	* run-elf32-tests.sh: Set test directories based on endianness.
	* run-uclibc-tests.sh: Likewise.

2013-02-27  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-uclibc.sh: Add ARC_LEGACY_PTRACE_ABI defintion when
	building gdbserver.

2013-02-27  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh (UNISRC): Updated.

2013-02-27  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Build with 4.4 components apart from GDB.
	* build-elf32.sh: Build with 4.4 components and no GDB.
	* build-linux.sh: Build with 4.4 tool chain.
	* build-uclibc.sh: Add ARC_LEGACY_PTRACE_ABI defintion when
	building gdbserver. Build 4.4 tool chain with GDB 7.5.1 (from 4.8
	tool chain).
	* run-tests.sh: Only run uClibc tests.
	* run-uclibc-tests.sh: Only run GDB tests.

2013-02-26  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Optionally do a fetch first, to deal with new
	branches.
